--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   env:
   variables:
-    AWS_DEFAULT_REGION: us-west-2
+    AWS_DEFAULT_REGION: ap-south-1
     IMAGE_REPO_NAME: simple-docker-service-02c95c63953b
     IMAGE_TAG: latest
     ACCOUNT_ID: 975049956388
