--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
   env:
   variables:
     AWS_DEFAULT_REGION: ap-south-1
-    IMAGE_REPO_NAME: simple-docker-service-02c95c63953b
+    IMAGE_REPO_NAME: fastapi-app
     IMAGE_TAG: latest
     ACCOUNT_ID: 975049956388
 
